--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.13",
+    "string-format": "^2.0.0",
     "telegraf": "^4.4.2"
   }
 }
