--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.23.0",
+    "buffer": "^6.0.3",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.13",
     "string-format": "^2.0.0",
