--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "nodemon": "^2.0.13",
     "string-format": "^2.0.0",
     "telegraf": "^4.4.2"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
